--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,92 @@
 
-Knes 1.0 []
+Knes 0.8 []
 -------------------------------
 
-    - Complete Reboot
+	- New Coralie Upper Stage Engine and Fuel Tank offers by @Beale
+	- New model for all Fairings
+	- New "EndCap" for the Guepiere adapter
+	- Fix of the ejection forces of the "Loop" decoupler
+	- New Glow Effect for Diamant engine
+	- New Boosters P10 P16 P3 P03 for Diamant rocket evolution
+	- New Small Decoupler radial for Booster P03
+
+Knes 0.7 [2019-02-05]
+-------------------------------
+
+	- New Parts for "Diomede" Rocket, all variant
+	- New Fx for Viska and Diomede by JadeOfMaar
+
+Knes 0.6.1 [2019-01-11]
+-------------------------------
+
+	- Fix for name of Science Parts (old save can't load)
+	- Change some nodes of techtree
+
+
+Knes 0.6 [2019-01-10]
+-------------------------------
+
+	- Update to KSP 1.6.1
+	- New Parts for "Varinka" French Rocket
+	- New Parts for "Viska" French Rocket
+	- Update of all Fairing for a better look
+	- New model for the "Cortex" Avionics of Ariane 5
+	- New model for the EPS Ariane 5 upper stage
+	- Nerf of the EPS Engine
+	- Fix of EAP Thrust
+	- New Texture for the Guepiere
+	- Crystals Ressource Cost Fix
+	- New Included Flag
+	- New AO texture and Normals for Ariane 5 core tank
+	- Many Nodes Fix
+	- Blue Fx for Vulcain Engine
+
+Knes 0.5 [2018-15-11]
+-------------------------------
+
+	- New Folder hierarchy
+	- New Science Parts
+	- Update to KSP 1.5.1
+
+Knes 0.4 [2018-04-12]
+-------------------------------
+
+	- New Elevon for IXV Patin
+	- New European Flag
+	- New IVA for HRM module
+	- Top node for IXV (for LES)	
+	- Surface attach node for Hermes Elevon	
+	- Decoupler G3750 is now Gold like the other
+	- IXV max temp / skin temp fix
+	- IXV is now a 3 crew command pod
+	- Updated Craft Files
+
+Knes 0.3 [2018-04-02]
+-------------------------------
+
+	- Update for KSP v1.4.2
+	- New mesh collider for Hermes Space Shuttle (needed for 1.4.2)
+	- Add Title on Agencies Config
+	- Check and test of all included Craft files for 1.4.2
+	- Fix for new RCS Fx
+
+Knes 0.2 [2018-01-30]
+-------------------------------
+
+	- New Parts Hermes Space Shuttle with elevon
+	- New Parts Hermes HRM module
+	- New Parts Grapple Device Robotic Arm (Klaw)
+	- New Craft Files for Hermes Space Shuttle
+	- SRB EAP Gimbal up to 3.5
+	- SRB P80 Gimbal up to 3.5
+	- Vulcain Engine Gimbal up to 8
+	- Compatibility Patch for Pathfinder (by Space Kadet)
+	- Dry Mass Correction for Fairing / H10 Fuel Tank (by Aerospacer)
+	- K-IXV texture update (Artefact correction)
+	- 2 New Craft files for Hermes Shuttle
+	- Props delete for future NF Props Support on CEV IVA
+
+Knes 0.1 [2017-08-03]
+-------------------------------
+
+	- Initial upload
