--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,14 +1,21 @@
 
-Knes 0.8 []
+Knes 0.8 [2019-03-16]
 -------------------------------
 
 	- New Coralie Upper Stage Engine and Fuel Tank offers by @Beale
-	- New model for all Fairings
+	- New model for all Fairings with a new automatic adapter
 	- New "EndCap" for the Guepiere adapter
 	- Fix of the ejection forces of the "Loop" decoupler
 	- New Glow Effect for Diamant engine
 	- New Boosters P10 P16 P3 P03 for Diamant rocket evolution
+	- New Dual Payload Adapter for Ariane 5
+	- New Parts for LRBA Vulcain rocket family, all variant
 	- New Small Decoupler radial for Booster P03
+	- Fix of the FX for Solid booster
+	- Specular fix some parts
+	- Textures Fix for some parts
+	- Change of name for Minus and Cortex Probe Core
+	- Propably many other little change and Fix
 
 Knes 0.7 [2019-02-05]
 -------------------------------
