--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,12 @@
 
+Knes 0. []
+-------------------------------
+
+	- Fix of smoke FX visible in space for solid booster
+	- Fix Of Scale FX for Diane Engine
+	- Fix Of Scale FX for Catherine Stage
+	- Add a nozzles collider for the P064 Booster
+
 Knes 0.8 [2019-03-16]
 -------------------------------
 
