Crew Pod Update

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,7 +5,8 @@ Knes 0. []
 	- Fix of smoke FX visible in space for solid booster
 	- Fix Of Scale FX for Diane Engine
 	- Fix Of Scale FX for Catherine Stage
-	- Add a nozzles collider for the P064 Booster
+	- Fix Add a nozzles collider for the P064 Booster
+	- Fix for Black Diamant Craft File
 
 Knes 0.8 [2019-03-16]
 -------------------------------
