Change Log update

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,12 @@ Knes 0. []
 	- Fix Of Scale FX for Catherine Stage
 	- Fix Add a nozzles collider for the P064 Booster
 	- Fix for Black Diamant Craft File
+	- Normal Map Fix for Diamant parts
+	- New Command Pod "Viking" 0.9375
+	- New Inline Parachute 0.9375
+	- New Heatshield 0.9375
+	- New Monoprop Fuel Tank 0.9375 Nano and medium size
+	- Fix Monoprop Capacity of Diamant parts
 
 Knes 0.8 [2019-03-16]
 -------------------------------
