--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,5 @@
 
-Knes 0. []
+Knes 0.9 [2019-03-29]
 -------------------------------
 
 	- Fix of smoke FX visible in space for solid booster
@@ -12,6 +12,7 @@ Knes 0. []
 	- New Inline Parachute 0.9375
 	- New Heatshield 0.9375
 	- New Monoprop Fuel Tank 0.9375 Nano and medium size
+	- New Docking System (Docking junior size)
 	- Fix Monoprop Capacity of Diamant parts
 
 Knes 0.8 [2019-03-16]
