--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+Knes 1.0 []
+-------------------------------
+
+	- New Cargo Pod 0.9375 "Minotaur"
+	- AO Fix on Carmen Fuel Tank
+	- Specular Fix on All Decoupler
 
 Knes 0.9 [2019-03-29]
 -------------------------------
