--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,8 +2,11 @@ Knes 1.0 []
 -------------------------------
 
 	- New Cargo Pod 0.9375 "Minotaur"
+	- New Cryogenic Engine H3 0.625
+	- Complete TechTree review
 	- AO Fix on Carmen Fuel Tank
 	- Specular Fix on All Decoupler
+	- Fix of missing name for Carmen Adapter
 
 Knes 0.9 [2019-03-29]
 -------------------------------
