--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,7 @@ Knes 1.0 []
 
 	- New Cargo Pod 0.9375 "Minotaur"
 	- New Cryogenic Engine H3 0.625
+	- New Model for Ariane 5 Small and medium FuelTank
 	- Complete TechTree review
 	- AO Fix on Carmen Fuel Tank
 	- Specular Fix on All Decoupler
