--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,9 @@ Knes 1.0 []
 	- AO Fix on Carmen Fuel Tank
 	- Specular Fix on All Decoupler
 	- Fix of missing name for Carmen Adapter
+	- New EndCap for Ariane5 EPC Fuel Tank
+	- New "Starlette" Sat
+	- New "Kassler" CubeSat
 
 Knes 0.9 [2019-03-29]
 -------------------------------
