--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,8 @@ Knes 1.0 []
 	- New EndCap for Ariane5 EPC Fuel Tank
 	- New "Starlette" Sat
 	- New "Kassler" CubeSat
+	- New Ariane L140 Stage
+	- New Ariane L220 Stage
 
 Knes 0.9 [2019-03-29]
 -------------------------------
