--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,9 +1,10 @@
-Knes 1.0 []
+Knes 1.0 [2019]
 -------------------------------
 
 	- New Cargo Pod 0.9375 "Minotaur"
 	- New Cryogenic Engine H3 0.625
 	- New Model for Ariane 5 Small and medium FuelTank
+	- New Model for H10 FuelTank (new size)
 	- Complete TechTree review
 	- AO Fix on Carmen Fuel Tank
 	- Specular Fix on All Decoupler
@@ -13,6 +14,7 @@ Knes 1.0 []
 	- New "Kassler" CubeSat
 	- New Ariane L140 Stage
 	- New Ariane L220 Stage
+	- New Ariane L220N Stage
 
 Knes 0.9 [2019-03-29]
 -------------------------------
