--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,7 @@ Knes 1.0 [2019]
 	- New Cryogenic Engine H3 0.625
 	- New Model for Ariane 5 Small and medium FuelTank
 	- New Model for H10 FuelTank (new size)
+	- New H8 FuelTank 1.875m
 	- Complete TechTree review
 	- AO Fix on Carmen Fuel Tank
 	- Specular Fix on All Decoupler
@@ -15,6 +16,10 @@ Knes 1.0 [2019]
 	- New Ariane L140 Stage
 	- New Ariane L220 Stage
 	- New Ariane L220N Stage
+	- New Model for the Zebulon hm7 engine
+	- New L33 Engine 1.875m
+	- New Model for the Minus probe core 1.875m
+	- New AR4 Avionics Probe core 1.875/2.5m
 
 Knes 0.9 [2019-03-29]
 -------------------------------
