Science part DEPRECATED

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,10 @@
-Knes 1.0 [2019]
+Knes 1.1 [2019-06-15]
+-------------------------------
+
+	- Science are now DEPRECATED (moved to standalone mod Interkosmos)
+	- Removed science part on the Hermes craft files
+	
+Knes 1.0 [2019-05-02]
 -------------------------------
 
 	- New Cargo Pod 0.9375 "Minotaur"
@@ -16,6 +22,8 @@ Knes 1.0 [2019]
 	- New Ariane L140 Stage
 	- New Ariane L220 Stage
 	- New Ariane L220N Stage
+	- New H45 Stage 2.5m
+	- New HM60 Engine 2.5m
 	- New Model for the Zebulon hm7 engine
 	- New L33 Engine 1.875m
 	- New Model for the Minus probe core 1.875m
