--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,8 +1,12 @@
 Knes 1.1 [2019-06-15]
 -------------------------------
 
+	- CEV & IXV LiftingsBodies are now DEPRECATED
+	- Abort System are now DEPRECATED
 	- Science are now DEPRECATED (moved to standalone mod Interkosmos)
 	- Removed science part on the Hermes craft files
+	- Nanosat decoupler reduced to 0.2 (i've also fix the axis)
+
 	
 Knes 1.0 [2019-05-02]
 -------------------------------
