--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,7 @@ Knes 1.1 [2019-06-15]
 	- Science are now DEPRECATED (moved to standalone mod Interkosmos)
 	- Removed science part on the Hermes craft files
 	- Nanosat decoupler reduced to 0.2 (i've also fix the axis)
+	- Clean up files names
 
 	
 Knes 1.0 [2019-05-02]
