Craft files null ref Fix

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,7 @@ Knes 1.1 [2019-06-15]
 	- Abort System are now DEPRECATED
 	- Science are now DEPRECATED (moved to standalone mod Interkosmos)
 	- Removed science part on the Hermes craft files
+	- Fix nullref on Ariane5 craft files after booster sep
 	- Nanosat decoupler reduced to 0.2 (i've also fix the axis)
 	- Clean up files names
 
