--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,12 @@
+Knes 1.2 [2019--]
+-------------------------------
+
+	- CEV & IXV LiftingsBodies are now DELETED
+	- Abort System are now DELETED
+	- Science are now DELETED (moved to standalone mod Interkosmos)
+	- Old science def DELETED
+	- Old parts removed in compatibilty patch: KIS / Tweakscale / Pathfinder / MechJeb
+	
 Knes 1.1 [2019-06-15]
 -------------------------------
 
@@ -8,7 +17,6 @@ Knes 1.1 [2019-06-15]
 	- Fix nullref on Ariane5 craft files after booster sep
 	- Nanosat decoupler reduced to 0.2 (i've also fix the axis)
 	- Clean up files names
-
 	
 Knes 1.0 [2019-05-02]
 -------------------------------
