--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,8 +1,9 @@
 Knes 1.2 [2019--]
 -------------------------------
 
-	- CEV & IXV LiftingsBodies are now DELETED
-	- Abort System are now DELETED
+	- New IVA for the "Viking" command pod
+	- CEV & IXV LiftingsBodies restored
+	- Abort System restored
 	- Science are now DELETED (moved to standalone mod Interkosmos)
 	- Old science def DELETED
 	- Old parts removed in compatibilty patch: KIS / Tweakscale / Pathfinder / MechJeb
