--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,11 +2,13 @@ Knes 1.2 [2019--]
 -------------------------------
 
 	- New IVA for the "Viking" command pod
+	- Cargo "Minotaur" is now also a science container
 	- CEV & IXV LiftingsBodies restored
 	- Abort System restored
 	- Science are now DELETED (moved to standalone mod Interkosmos)
 	- Old science def DELETED
 	- Old parts removed in compatibilty patch: KIS / Tweakscale / Pathfinder / MechJeb
+	- Zebulon Engine Thrust up to 64 Kn
 	
 Knes 1.1 [2019-06-15]
 -------------------------------
