--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,9 @@ Knes 1.2 [2019--]
 -------------------------------
 
 	- New IVA for the "Viking" command pod
+	- Fix of smoke engine on a wrong axis for L3S Hydrolox engine
+	- New sound effect for Vulcain Engines
+	- New sound effect for L3S Engines
 	- Cargo "Minotaur" is now also a science container
 	- CEV & IXV LiftingsBodies restored
 	- Abort System restored
