--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,7 @@ Knes 1.2 [2019--]
 
 	- New IVA for the "Viking" command pod
 	- Fix of smoke engine on a wrong axis for L3S Hydrolox engine
+	- New Fx for Ariane 5 Vulcain engine
 	- New sound effect for Vulcain Engines
 	- New sound effect for L3S Engines
 	- Cargo "Minotaur" is now also a science container
