Station parts + RCS

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,7 @@ Knes 1.2 [2019--]
 	- New IVA for the "Viking" command pod
 	- New Station module 1.25 scale
 	- New Adapter for station 1.25 to 0.9375 and 0.625
+	- New Inline RCS control unit at 0.625 scale
 	- Fix of smoke engine on a wrong axis for L3S Hydrolox engine
 	- New Fx for Ariane 5 Vulcain engine
 	- New sound effect for Vulcain Engines
