--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,7 +2,9 @@ Knes 1.2 [2019--]
 -------------------------------
 
 	- New IVA for the "Viking" command pod
-	- New Station module 1.25 scale
+	- New Station Hab module 1.25 scale
+	- New Crystal Factory Module 1.25 scale
+	- New ScienceLab Module 1.25 scale
 	- New Adapter for station 1.25 to 0.9375 and 0.625
 	- New Inline RCS control unit at 0.625 scale
 	- Fix of smoke engine on a wrong axis for L3S Hydrolox engine
