--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,4 @@
-Knes 1.2 [2019--]
+Knes 1.2 [2019-07-]
 -------------------------------
 
 	- New IVA for the "Viking" command pod
@@ -17,6 +17,7 @@ Knes 1.2 [2019--]
 	- Science are now DELETED (moved to standalone mod Interkosmos)
 	- Old science def DELETED
 	- Old parts removed in compatibilty patch: KIS / Tweakscale / Pathfinder / MechJeb
+	- New Craft Files for station module
 	
 Knes 1.1 [2019-06-15]
 -------------------------------
