--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,8 @@ Knes 1.2 [2019-07-]
 	- New Crystal Factory Module 1.25 scale
 	- New ScienceLab Module 1.25 scale
 	- New Adapter for station 1.25 to 0.9375 and 0.625
+	- New Adapter 0.9375 to 0.625
+	- New Structural node for space station
 	- New Inline RCS control unit at 0.625 scale
 	- Fix of smoke engine on a wrong axis for L3S Hydrolox engine
 	- New Fx for Ariane 5 Vulcain engine
@@ -18,6 +20,7 @@ Knes 1.2 [2019-07-]
 	- Old science def DELETED
 	- Old parts removed in compatibilty patch: KIS / Tweakscale / Pathfinder / MechJeb
 	- New Craft Files for station module
+	- New Craft Files for Small Tanker
 	
 Knes 1.1 [2019-06-15]
 -------------------------------
