--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Knes 1.3 [2019--]
+-------------------------------
+
+	- Fix MaxTemp for all Vulcain Engine
+
 Knes 1.2 [2019-07-05]
 -------------------------------
 
