--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@ Knes 1.3 [2019--]
 -------------------------------
 
 	- Fix MaxTemp for all Vulcain Engine
+	- Fix Staging issue with pod (clear escape hatch deleted)
 	- Staging Toggle Enabled Flight is now aviable for all Fairing
 
 Knes 1.2 [2019-07-05]
