--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@ Knes 1.3 [2019--]
 -------------------------------
 
 	- Fix MaxTemp for all Vulcain Engine
+	- ISP reduced for HM7 and HM60 Engine
 	- Fix Staging issue with pod (clear escape hatch deleted)
 	- Staging Toggle Enabled Flight is now aviable for all Fairing
 
