--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,9 @@
 Knes 1.3 [2019--]
 -------------------------------
 
+	- New Model for IXV
+	- New Model for IXV elevon
+	- New srf attach Monoprop engine
 	- Fix MaxTemp for all Vulcain Engine
 	- ISP reduced for HM7 and HM60 Engine
 	- Fix Staging issue with pod (clear escape hatch deleted)
