--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,9 +3,12 @@ Knes 1.3 [2019--]
 
 	- New Model for IXV
 	- New Model for IXV elevon
+	- New Model for CEV
 	- New srf attach Monoprop engine
+	- New Parachute
+	- New Paraglider (need "RetractableLiftingSurface" Mod)
 	- Fix MaxTemp for all Vulcain Engine
-	- ISP reduced for HM7 and HM60 Engine
+	- ISP reduced for H3, HM7 and HM60 Engine
 	- Fix Staging issue with pod (clear escape hatch deleted)
 	- Staging Toggle Enabled Flight is now aviable for all Fairing
 
