--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -10,7 +10,7 @@ Knes 1.3 [2019--]
 	- Fix MaxTemp for all Vulcain Engine
 	- ISP reduced for H3, HM7 and HM60 Engine
 	- Fix Staging issue with pod (clear escape hatch deleted)
-	- Staging Toggle Enabled Flight is now aviable for all Fairing
+	- Fix Staging issue with all fairings
 
 Knes 1.2 [2019-07-05]
 -------------------------------
