--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,10 +7,14 @@ Knes 1.3 [2019--]
 	- New srf attach Monoprop engine
 	- New Parachute
 	- New Paraglider (need "RetractableLiftingSurface" Mod)
+	- New HM4 Engine 1.25
+	- New Fuel Tank 1.25
 	- Fix MaxTemp for all Vulcain Engine
 	- ISP reduced for H3, HM7 and HM60 Engine
 	- Fix Staging issue with pod (clear escape hatch deleted)
 	- Fix Staging issue with all fairings
+	- New Craft File Heracles-H
+	- New Craft File Turquoise-H
 
 Knes 1.2 [2019-07-05]
 -------------------------------
