--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,7 +8,9 @@ Knes 1.3 [2019--]
 	- New Parachute
 	- New Paraglider (need "RetractableLiftingSurface" Mod)
 	- New HM4 Engine 1.25
+	- New H2 Engine 0.9375
 	- New Fuel Tank 1.25
+	- 2 New Fuel Tank 0.9375
 	- Fix MaxTemp for all Vulcain Engine
 	- ISP reduced for H3, HM7 and HM60 Engine
 	- Fix Staging issue with pod (clear escape hatch deleted)
