--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -17,6 +17,7 @@ Knes 1.3 [2019--]
 	- Fix Staging issue with all fairings
 	- New Craft File Heracles-H
 	- New Craft File Turquoise-H
+	- Cost fix for the crystal factory.
 
 Knes 1.2 [2019-07-05]
 -------------------------------
