--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,4 @@
-Knes 1.3 [2019--]
+Knes 1.3 [2019-08-19]
 -------------------------------
 
 	- New Model for IXV
@@ -17,7 +17,7 @@ Knes 1.3 [2019--]
 	- Fix Staging issue with all fairings
 	- New Craft File Heracles-H
 	- New Craft File Turquoise-H
-	- Cost fix for the crystal factory.
+	- Cost fix for the crystal factory
 
 Knes 1.2 [2019-07-05]
 -------------------------------
