--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+Knes 1.4 [2019]
+-------------------------------
+
+	- Cost fix for all L3S First Stage
+	- Cost fix for Catherine Stage
+	- ISP nerf for all Cryo engines
+	
+
 Knes 1.3 [2019-08-19]
 -------------------------------
 
