--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,7 @@ Knes 1.4 [2019]
 	- Cost fix for all L3S First Stage
 	- Cost fix for Catherine Stage
 	- ISP nerf for all Cryo engines
+	- Thrust up for H2 H3 HM4 HM7 Cryo Engine
 	
 
 Knes 1.3 [2019-08-19]
