Viking service module - Texture update

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,7 @@ Knes 1.4 [2019]
 	- Cost fix for Catherine Stage
 	- ISP nerf for all Cryo engines
 	- Thrust up for H2 H3 HM4 HM7 Cryo Engine
+	- Texture update for the Viking service Module
 	
 
 Knes 1.3 [2019-08-19]
