--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,7 @@ Knes 1.4 [2019]
 	- ISP nerf for all Cryo engines
 	- Thrust up for H2 H3 HM4 HM7 Cryo Engine
 	- Texture update for the Viking service Module
+	- StarWatcher Collider remade
 	
 
 Knes 1.3 [2019-08-19]
