--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,9 @@ Knes 1.4 [2019]
 	- Thrust up for H2 H3 HM4 HM7 Cryo Engine
 	- Texture update for the Viking service Module
 	- StarWatcher Collider remade
+	- New plume for Monoprop engine
+	- Cost balance for Lifting bodies
+	- Fix bug with fairing adapter
 	
 
 Knes 1.3 [2019-08-19]
