--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -10,6 +10,7 @@ Knes 1.4 [2019]
 	- New plume for Monoprop engine
 	- Cost balance for Lifting bodies
 	- Fix bug with fairing adapter
+	- LH2 patch made by @Zorg for cryo compatibility
 	
 
 Knes 1.3 [2019-08-19]
