--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,8 @@ Knes 1.4 [2019]
 	- Cost balance for Lifting bodies
 	- Fix bug with fairing adapter
 	- LH2 patch made by @Zorg for cryo compatibility
+	- New Bare Variant for HM60 Engine
+	- New Bare Variant for HM7 Engine
 	
 
 Knes 1.3 [2019-08-19]
