--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -13,6 +13,7 @@ Knes 1.4 [2019]
 	- LH2 patch made by @Zorg for cryo compatibility
 	- New Bare Variant for HM60 Engine
 	- New Bare Variant for HM7 Engine
+	- Add more tags
 	
 
 Knes 1.3 [2019-08-19]
