--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -15,6 +15,8 @@ Knes 1.4 [2019]
 	- New Bare Variant for HM7 Engine
 	- New Bare Variant for Vulcain Engine
 	- Add more tags
+	- New Model an config for P80 booster
+	- New texture for p80 and EAP boosters
 	
 
 Knes 1.3 [2019-08-19]
