--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -17,6 +17,8 @@ Knes 1.4 [2019]
 	- Add more tags
 	- New Model an config for P80 booster
 	- New texture for p80 and EAP boosters
+	- New H4 small Fuel Tank 1.875
+	- Texture update for L3S parts
 	
 
 Knes 1.3 [2019-08-19]
