--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -19,6 +19,8 @@ Knes 1.4 [2019]
 	- New texture for p80 and EAP boosters
 	- New H4 small Fuel Tank 1.875
 	- Texture update for L3S parts
+	- New p35 Booster 1.875 scale
+	- New Model for All safe system abort module
 	
 
 Knes 1.3 [2019-08-19]
