--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -21,6 +21,8 @@ Knes 1.4 [2019]
 	- Texture update for L3S parts
 	- New p35 Booster 1.875 scale
 	- New Model for All safe system abort module
+	- New small payload adapter to replace "fairing adapter"
+	- New various craft files
 	
 
 Knes 1.3 [2019-08-19]
