--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -23,6 +23,7 @@ Knes 1.4 [2019]
 	- New Model for All safe system abort module
 	- New small payload adapter to replace "fairing adapter"
 	- New various craft files
+	- New Bare Variant for H3 Engine
 	
 
 Knes 1.3 [2019-08-19]
