--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -24,6 +24,7 @@ Knes 1.4 [2019]
 	- New small payload adapter to replace "fairing adapter"
 	- New various craft files
 	- New Bare Variant for H3 Engine
+	- New Bare Variant for H2 Engine
 	
 
 Knes 1.3 [2019-08-19]
