--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -25,6 +25,8 @@ Knes 1.4 [2019]
 	- New various craft files
 	- New Bare Variant for H3 Engine
 	- New Bare Variant for H2 Engine
+	- New Texture variant for Hermes shuttle
+	- Hermes Model and Texture update
 	
 
 Knes 1.3 [2019-08-19]
