--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -27,6 +27,8 @@ Knes 1.4 [2019]
 	- New Bare Variant for H2 Engine
 	- New Texture variant for Hermes shuttle
 	- Hermes Model and Texture update
+	- New node for Hermes Shuttle
+	- Inline Decoupler allow srf attach
 	
 
 Knes 1.3 [2019-08-19]
