--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -29,6 +29,7 @@ Knes 1.4 [2019]
 	- Hermes Model and Texture update
 	- New node for Hermes Shuttle
 	- Inline Decoupler allow srf attach
+	- HRM module Mesh update, new node setting
 	
 
 Knes 1.3 [2019-08-19]
