--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -30,6 +30,9 @@ Knes 1.4 [2019]
 	- New node for Hermes Shuttle
 	- Inline Decoupler allow srf attach
 	- HRM module Mesh update, new node setting
+	- Fix Hydrolox Particle FX for KSP 1.8
+	- Fix Monoprop Particle FX for KSP 1.8
+	- Fix Fairing texture for KSP 1.8
 	
 
 Knes 1.3 [2019-08-19]
