--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -33,6 +33,7 @@ Knes 1.4 [2019]
 	- Fix Hydrolox Particle FX for KSP 1.8
 	- Fix Monoprop Particle FX for KSP 1.8
 	- Fix Fairing texture for KSP 1.8
+	- New Monoprop Engine using separatron assets
 	
 
 Knes 1.3 [2019-08-19]
