--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -34,6 +34,9 @@ Knes 1.4 [2019]
 	- Fix Monoprop Particle FX for KSP 1.8
 	- Fix Fairing texture for KSP 1.8
 	- New Monoprop Engine using separatron assets
+	- Hermes IVA update with overlay
+	- Hermes is now 7 crew capacity for rescue
+	- HRM IVA update
 	
 
 Knes 1.3 [2019-08-19]
