--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -37,6 +37,8 @@ Knes 1.4 [2019]
 	- Hermes IVA update with overlay
 	- Hermes is now 7 crew capacity for rescue
 	- HRM IVA update
+	- New bottom node for L140 L220 and L220N stage
+	- All texture converted to DDS DXT5 for KSP 1.8
 	
 
 Knes 1.3 [2019-08-19]
