--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+Knes 1.5 [2019]
+-------------------------------
+
+	- New 4 internal camera for Hermes IVA
+	- Fix mesh of the left windows of Hermes IVA (not aligned)
+	- Added new craft files for StarRider and StarWatcher vehicle
+	- Deleted Ariane 5C craft files
+
 Knes 1.4 [2019]
 -------------------------------
 
