New model for monoprop engine

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,7 @@ Knes 1.5 [2019]
 	- Fix mesh of the left windows of Hermes IVA (not aligned)
 	- Added new craft files for StarRider and StarWatcher vehicle
 	- Deleted Ariane 5C craft files
+	- New model for Monoprop engine 1 2 3
 
 Knes 1.4 [2019]
 -------------------------------
