--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,8 @@ Knes 1.5 [2019]
 	- Added new craft files for StarRider and StarWatcher vehicle
 	- Deleted Ariane 5C craft files
 	- New model for Monoprop engine 1 2 3
+	- New srf attach RCS pod for roll control
+	- New srf attach Monoprop fueltank
 
 Knes 1.4 [2019]
 -------------------------------
