--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,11 +3,13 @@ Knes 1.5 [2019]
 
 	- New 4 internal camera for Hermes IVA
 	- Fix mesh of the left windows of Hermes IVA (not aligned)
+	- Fix of the lightmap of the station iva
 	- Added new craft files for StarRider and StarWatcher vehicle
 	- Deleted Ariane 5C craft files
 	- New model for Monoprop engine 1 2 3
 	- New srf attach RCS pod for roll control
 	- New srf attach Monoprop fueltank
+	- New srf attach RCS pod 3 way for upper stage
 
 Knes 1.4 [2019]
 -------------------------------
