Direct Antenna upload

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -10,6 +10,7 @@ Knes 1.5 [2019]
 	- New srf attach RCS pod for roll control
 	- New srf attach Monoprop fueltank
 	- New srf attach RCS pod 3 way for upper stage
+	- New deployable antenna
 
 Knes 1.4 [2019]
 -------------------------------
