--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,7 @@ Knes 1.5 [2019]
 	- New srf attach Monoprop fueltank
 	- New srf attach RCS pod 3 way for upper stage
 	- New deployable antenna
+	- Fixed node on "Zoe" adapter
 
 Knes 1.4 [2019]
 -------------------------------
