--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -12,6 +12,7 @@ Knes 1.5 [2019]
 	- New srf attach RCS pod 3 way for upper stage
 	- New deployable antenna
 	- Fixed node on "Zoe" adapter
+	- Fix emissive on catherine stage
 
 Knes 1.4 [2019]
 -------------------------------
