--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -13,6 +13,8 @@ Knes 1.5 [2019]
 	- New deployable antenna
 	- Fixed node on "Zoe" adapter
 	- Fix emissive on catherine stage
+	- Balance for StarRider RCS
+	- Balance for StarWatcher RCS
 
 Knes 1.4 [2019]
 -------------------------------
