--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -15,6 +15,10 @@ Knes 1.5 [2019]
 	- Fix emissive on catherine stage
 	- Balance for StarRider RCS
 	- Balance for StarWatcher RCS
+	- Balance for Hermes RCS
+	- More simple collider for Abort adapter nano
+	- More simple collider for Abort adapter small
+	- New flat SolarPanel really small size
 
 Knes 1.4 [2019]
 -------------------------------
