--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -19,6 +19,8 @@ Knes 1.5 [2019]
 	- More simple collider for Abort adapter nano
 	- More simple collider for Abort adapter small
 	- New flat SolarPanel really small size
+	- StarRider IVA Fix (seat position)
+	- StarWatcher IVA Fix (seat position)
 
 Knes 1.4 [2019]
 -------------------------------
