--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -21,6 +21,8 @@ Knes 1.5 [2019]
 	- New flat SolarPanel really small size
 	- StarRider IVA Fix (seat position)
 	- StarWatcher IVA Fix (seat position)
+	- Fix NanoSat Suncatcher
+	- StarWatcher Texture Update
 
 Knes 1.4 [2019]
 -------------------------------
