--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -23,6 +23,7 @@ Knes 1.5 [2019]
 	- StarWatcher IVA Fix (seat position)
 	- Fix NanoSat Suncatcher
 	- StarWatcher Texture Update
+	- Abort Module color adjusted
 
 Knes 1.4 [2019]
 -------------------------------
