--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,4 @@
-Knes 1.5 [2019]
+Knes 1.5 [2019-11-07]
 -------------------------------
 
 	- New 4 internal camera for Hermes IVA
@@ -24,6 +24,8 @@ Knes 1.5 [2019]
 	- Fix NanoSat Suncatcher
 	- StarWatcher Texture Update
 	- Abort Module color adjusted
+	- Inline decoupler mass balance
+	- TechTree balance
 
 Knes 1.4 [2019]
 -------------------------------
