--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,10 @@
+Knes 1.6 [2019--]
+-------------------------------
+
+	- Fix of the UnitAreaMass of the 1.875 fairing
+	- Fix of the small initial mass inconsistencies in the fairing collection
+
+	
 Knes 1.5 [2019-11-07]
 -------------------------------
 
