Mrk IVA fix + changelog

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,8 +1,26 @@
-Knes 1.6 [2019--]
+Knes 1.6 [2019-02-]
 -------------------------------
 
 	- Fix of the UnitAreaMass of the 1.875 fairing
 	- Fix of the small initial mass inconsistencies in the fairing collection
+	- New Multi-Role Kapsule DM
+	- New Multi-Role Kapsule DM (Recovery)
+	- New Multi-Role Kapsule Rescue SM
+	- New Multi-Role Kapsule Cargo SM
+	- New Multi-Role Kapsule Extended SM
+	- New MRK-2b Heatshield 
+	- New MRK-3a Solar Panel 
+	- New MRK-3b Solar Panel
+	- New MRK-30a Solar Array
+	- New MRK-1c Parachute
+	- New ECBM (for MRK) Docking Port
+	- New Active ECBM Docking Port
+	- New MRK-4d Decoupler
+	- New MRK-5a Antenna
+	- New MRK-6f Thruster
+	- New MRK Launch Escape System
+	- New MRK-3c Solar Panel 
+	- New MRK-1A Solar Panel
 
 	
 Knes 1.5 [2019-11-07]
