--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,10 @@
-Knes 1.6 [2019-02-]
+Knes 1.6.1 [2020-03-02]
+-------------------------------
+
+	- Fix of a typo error for the TechRequired
+	- Review of the TechTree (Simple MRK aviable earlier)
+
+Knes 1.6.0 [2020-03-01]
 -------------------------------
 
 	- Fix of the UnitAreaMass of the 1.875 fairing
@@ -23,7 +29,7 @@ Knes 1.6 [2019-02-]
 	- New MRK-1A Solar Panel
 
 	
-Knes 1.5 [2019-11-07]
+Knes 1.5.0 [2019-11-07]
 -------------------------------
 
 	- New 4 internal camera for Hermes IVA
