--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Knes 1.7 [2020--]
+-------------------------------
+
+	- New Viking 5 Engine : TrussMount / 0.9375 / 1.25 variant
+
 Knes 1.6.1 [2020-03-02]
 -------------------------------
 
