--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,7 @@ Knes 1.7 [2020--]
 	- New Viking 5 Engine : TrussMount / 0.9375 / 1.25 variant
 	- Added Fuel Crossfeed for MRK Heatshield
 	- Added Fuel Crossfeed for MRK Decoupler
+	- Fix of the MRK Maxtemp (too low)
 
 Knes 1.6.1 [2020-03-02]
 -------------------------------
