--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,10 +1,12 @@
-Knes 1.7 [2020--]
+Knes 1.7 [2020-04-17]
 -------------------------------
 
 	- New Viking 5 Engine : TrussMount / 0.9375 / 1.25 variant
 	- Added Fuel Crossfeed for MRK Heatshield
 	- Added Fuel Crossfeed for MRK Decoupler
 	- Fix of the MRK Maxtemp (too low)
+	- New Black Variant for 1.25 Station Part and Adapter
+	- New Black Variant for Crew and Cargo pod, chute and avionics
 
 Knes 1.6.1 [2020-03-02]
 -------------------------------
