--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,8 @@ Knes 1.7 [2020-04-17]
 	- Fix of the MRK Maxtemp (too low)
 	- New Black Variant for 1.25 Station Part and Adapter
 	- New Black Variant for Crew and Cargo pod, chute and avionics
+	- New Black Variant for many diamant/diomede parts
+	- New metal variant for Starwatcher using new shader
 
 Knes 1.6.1 [2020-03-02]
 -------------------------------
