--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,6 +9,11 @@ Knes 1.7 [2020-04-17]
 	- New Black Variant for Crew and Cargo pod, chute and avionics
 	- New Black Variant for many diamant/diomede parts
 	- New metal variant for Starwatcher using new shader
+	- Fix of the node for the bare variant of vulcain engine (upside down)
+	- New Mesh variant for the EAP nose cone A
+	- Fix of all Radial Decoupler (wrong angle)
+	- Update of all craft files
+	- Added craft files for Ariane 6 and Ariane 5 ESC-A
 
 Knes 1.6.1 [2020-03-02]
 -------------------------------
