--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Knes 1.7.1 [2020--]
+-------------------------------
+
+	- Fix Typo error on MRK pod "Mass"
+	
 Knes 1.7 [2020-04-17]
 -------------------------------
 
