--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,9 +1,12 @@
-Knes 1.7.1 [2020--]
+Knes 1.7.1 [2020-04-]
 -------------------------------
 
 	- Fix Typo error on MRK pod "Mass"
+	- Fix Wrong Alpha on many black variant
+	- Fix Gold Variant on radial decoupler
+	- Adjusted Black Variant on avionics part
 	
-Knes 1.7 [2020-04-17]
+Knes 1.7.0 [2020-04-17]
 -------------------------------
 
 	- New Viking 5 Engine : TrussMount / 0.9375 / 1.25 variant
