--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,8 @@ Knes 1.7.1 [2020-04-]
 	- Fix Wrong Alpha on many black variant
 	- Fix Gold Variant on radial decoupler
 	- Adjusted Black Variant on avionics part
+	- European Flag updated
+	- New European flag "transparent"
 	
 Knes 1.7.0 [2020-04-17]
 -------------------------------
