--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+Knes 1.7.2 [2020-05-]
+-------------------------------
+
+	- Fix RCS on StarRider Pod
+	- Fix RCS on StarWatcher Pod
+	- Added to transmit science on StarRider Pod
+	- Added to transmit science on StarWatcher Pod
+
 Knes 1.7.1 [2020-04-]
 -------------------------------
 
