Reduced Antenna Power for C-2501 "Wall-e" Direct Antenna

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,7 @@ Knes 1.7.2 [2020-05-01]
 	- Fix RCS on StarWatcher Pod
 	- Added to transmit science on StarRider Pod
 	- Added to transmit science on StarWatcher Pod
+	- Reduced Antenna Power for C-2501 "Wall-e" Direct Antenna
 
 Knes 1.7.1 [2020-04-]
 -------------------------------
