--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,7 @@ Knes 1.7.2 [2020-05-01]
 	- Added to transmit science on StarRider Pod
 	- Added to transmit science on StarWatcher Pod
 	- Reduced Antenna Power for C-2501 "Wall-e" Direct Antenna
+	- Fix black color variant of station parts
 
 Knes 1.7.1 [2020-04-]
 -------------------------------
