--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Knes 1.7.3 [2020-05-]
+-------------------------------
+
+	- Fix of Top node for engine variant
+
 Knes 1.7.2 [2020-05-01]
 -------------------------------
 
