--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@ Knes 1.7.3 [2020-05-]
 -------------------------------
 
 	- Fix of Top node for engine variant
+	- Set Ablator at max by default for Liftingbodies
 
 Knes 1.7.2 [2020-05-01]
 -------------------------------
