--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,8 +1,9 @@
-Knes 1.7.3 [2020-05-]
+Knes 1.7.3 [2020-06-]
 -------------------------------
 
 	- Fix of Top node for engine variant
 	- Set Ablator at max by default for Liftingbodies
+	- New KIS item (snacks chocolate)
 
 Knes 1.7.2 [2020-05-01]
 -------------------------------
