--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,8 +1,13 @@
-Knes 1.8.0 [2020-06-]
+Knes 1.8.0 [2020-07-]
 -------------------------------
 
 	- Fix of Top node for engine variant
 	- Set Ablator at max by default for Liftingbodies
+	- New ATV Adpater
+	- New ATV Antenna
+	- New ATV Cargo
+	- New ATV Solar Panel
+	- New ATV Service Module
 
 Knes 1.7.2 [2020-05-01]
 -------------------------------
