--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,8 @@ Knes 1.8.0 [2020-07-]
 	- New ATV Cargo
 	- New ATV Solar Panel
 	- New ATV Service Module
+	- Fix for pathfinder patch (Crystal ressources is now keeped on cargo pod)
+	- Changed Mass Ratio of the crystals ressource, to limit the created mass problem.
 
 Knes 1.7.2 [2020-05-01]
 -------------------------------
