--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,15 +1,24 @@
 Knes 1.8.0 [2020-07-]
 -------------------------------
 
-	- Fix of Top node for engine variant
-	- Set Ablator at max by default for Liftingbodies
 	- New ATV Adpater
 	- New ATV Antenna
 	- New ATV Cargo
 	- New ATV Solar Panel
 	- New ATV Service Module
+	- New Set of RCS for ATV
+	- New 1.25 Hatch module
+	- New 1.25 Pressurised cargo
+	- New 2.5 Science Lab
+	- New 2.5 Node module
+	- New 2.5 electricty module
+	- New 2.5 monoprop module
+	- New 2.5 H22 Fuel Tank
 	- Fix for pathfinder patch (Crystal ressources is now keeped on cargo pod)
-	- Changed Mass Ratio of the crystals ressource, to limit the created mass problem.
+	- Fix of many bulkhead profile and Tweakscale patch for pretty much all parts, big thanks to @Lisias!
+	- Fix of Top node for engine variant
+	- Changed Mass Ratio of the crystals ressource, to limit the created mass problem.	
+	- Set Ablator at max by default for Liftingbodies	
 
 Knes 1.7.2 [2020-05-01]
 -------------------------------
