--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,7 @@
 Knes 1.8.0 [2020-07-]
 -------------------------------
 
+	- New Snacks Chocolate KIS item (need KIS)
 	- New ATV Adpater
 	- New ATV Antenna
 	- New ATV Cargo
