--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -20,6 +20,8 @@ Knes 1.8.0 [2020-07-]
 	- Fix of Top node for engine variant
 	- Changed Mass Ratio of the crystals ressource, to limit the created mass problem.	
 	- Set Ablator at max by default for Liftingbodies	
+	- Update of the MRK solar panel texture
+	- MRK Pod could now bringback some crystals
 
 Knes 1.7.2 [2020-05-01]
 -------------------------------
