--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -15,6 +15,7 @@ Knes 1.8.0 [2020-07-]
 	- New 2.5 electricty module
 	- New 2.5 monoprop module
 	- New 2.5 H22 Fuel Tank
+	- New MRK Cargo Variant / Solaris
 	- Fix for pathfinder patch (Crystal ressources is now keeped on cargo pod)
 	- Fix of many bulkhead profile and Tweakscale patch for pretty much all parts, big thanks to @Lisias!
 	- Fix of Top node for engine variant
