--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,4 @@
-Knes 1.8.0 [2020-07-]
+Knes 1.8.0 [2020-07-02]
 -------------------------------
 
 	- New Snacks Chocolate KIS item (need KIS)
@@ -24,6 +24,7 @@ Knes 1.8.0 [2020-07-]
 	- Set Ablator at max by default for Liftingbodies	
 	- Update of the MRK solar panel texture
 	- MRK Pod could now bringback some crystals
+	- New Craft Files
 
 Knes 1.7.2 [2020-05-01]
 -------------------------------
