--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,4 @@
-Knes 1.8.0 [2020-07-02]
+Knes 1.8.0 [2020-07-03]
 -------------------------------
 
 	- New Snacks Chocolate KIS item (need KIS)
@@ -24,6 +24,8 @@ Knes 1.8.0 [2020-07-02]
 	- Set Ablator at max by default for Liftingbodies	
 	- Update of the MRK solar panel texture
 	- MRK Pod could now bringback some crystals
+	- Fixed Fairings for KSP 1.10
+	- Diamant fairings don't have black variant anymore
 	- New Craft Files
 
 Knes 1.7.2 [2020-05-01]
