--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@ Knes 1.8.0 [2020-07-03]
 -------------------------------
 
 	- New Snacks Chocolate KIS item (need KIS)
+	- IVA include Snacks Chocolate to match the new esa Update!	
 	- New ATV Adpater
 	- New ATV Antenna
 	- New ATV Cargo
@@ -15,6 +16,7 @@ Knes 1.8.0 [2020-07-03]
 	- New 2.5 electricty module
 	- New 2.5 monoprop module
 	- New 2.5 H22 Fuel Tank
+	- New 2.5 Booster
 	- New MRK Cargo Variant / Solaris
 	- New Crystal Lab/Factory
 	- Fix for pathfinder patch (Crystal ressources is now keeped on cargo pod)
@@ -27,6 +29,7 @@ Knes 1.8.0 [2020-07-03]
 	- Fixed Fairings for KSP 1.10
 	- Diamant fairings don't have black variant anymore
 	- New Craft Files
+	- MRK RCS Thruster is now more powerfull
 
 Knes 1.7.2 [2020-05-01]
 -------------------------------
