--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+Knes 1.8.1 [2020-07-06]
+-------------------------------
+
+	- Fix double _Knes_STEAM_CrystalLab in tweakscale patch
+	- Adding tweascale support for the two L3S P120 boosters
+
 Knes 1.8.0 [2020-07-03]
 -------------------------------
 
