--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,8 +1,9 @@
-Knes 1.8.1 [2020-07-06]
+Knes 1.8.1 [2020-07-]
 -------------------------------
 
 	- Fix double _Knes_STEAM_CrystalLab in tweakscale patch
 	- Adding tweascale support for the two L3S P120 boosters
+	- Add 3 science experiment to the STEAM sciencelab
 
 Knes 1.8.0 [2020-07-03]
 -------------------------------
