--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@ Knes 1.8.1 [2020-07-]
 -------------------------------
 
 	- Fix double _Knes_STEAM_CrystalLab in tweakscale patch
+	- Fix ATV RCS description (A & B)
 	- Adding tweascale support for the two L3S P120 boosters
 	- Add 3 science experiment to the STEAM sciencelab
 
