--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,10 +1,16 @@
-Knes 1.8.1 [2020-07-]
+Knes 1.8.1 [2020-07-08]
 -------------------------------
 
 	- Fix double _Knes_STEAM_CrystalLab in tweakscale patch
 	- Fix ATV RCS description (A & B)
+	- Fix ATV Nose Adapter description
+	- Fix STEAM "Blamont" description
+	- Fix ATV Antenna description
+	- Fix ATV Solar Panel description
 	- Adding tweascale support for the two L3S P120 boosters
 	- Add 3 science experiment to the STEAM sciencelab
+	- Reduced ATV SolarPanel Charge rate to 8
+	- Review of the TechTree for P120 boosters
 
 Knes 1.8.0 [2020-07-03]
 -------------------------------
