--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,10 @@
+Knes 1.8.2 [2020-07-]
+-------------------------------
+
+	- Fix P120 booster fairing inverted normals
+	- New P40 1.25 boosters for diogene 2 launcher
+	- Craft Files Updates
+	
 Knes 1.8.1 [2020-07-08]
 -------------------------------
 
