--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,9 @@ Knes 1.8.2 [2020-07-]
 	- Fix P120 booster fairing inverted normals
 	- New P40 1.25 boosters for diogene 2 launcher
 	- Craft Files Updates
+	- Reduced Fuel in H8 & H10 FuelTank
+	- Adjust Diamant Engine isp
+	- Adjust Carmen Engine isp Diane/Mireille
 	
 Knes 1.8.1 [2020-07-08]
 -------------------------------
