--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,8 @@ Knes 1.8.2 [2020-07-]
 	- Reduced Fuel in H8 & H10 FuelTank
 	- Adjust Diamant Engine isp
 	- Adjust Carmen Engine isp Diane/Mireille
+	- Global Review of Engine Mass (Reduced)
+	- P064 have now 30 solid fuel
 	
 Knes 1.8.1 [2020-07-08]
 -------------------------------
