--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,8 +3,10 @@ Knes 1.8.2 [2020-07-]
 
 	- Fix P120 booster fairing inverted normals
 	- New P40 1.25 boosters for diogene 2 launcher
+	- New Snecma "Avroom" Avionics
 	- Craft Files Updates
 	- Reduced Fuel in H8 & H10 FuelTank
+	- Reduced size of Adapter collider, to not block Fairing
 	- Adjust Diamant Engine isp
 	- Adjust Carmen Engine isp Diane/Mireille
 	- Global Review of Engine Mass (Reduced)
