--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Knes 1.8.3 [2020--]
+-------------------------------
+
+	- Fix Cost = 0 on Vesta Engine
+
 Knes 1.8.2 [2020-07-16]
 -------------------------------
 
