--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,7 +1,7 @@
 Knes 1.8.3 [2020--]
 -------------------------------
 
-	- Fix Cost = 0 on Vesta Engine
+	- Fix Cost = 0 on some Vesta/Veronique parts
 
 Knes 1.8.2 [2020-07-16]
 -------------------------------
