Fix before update

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,7 +1,10 @@
-Knes 1.8.3 [2020--]
+Knes 1.9.0 [2021-01-02]
 -------------------------------
 
+	- New Callisto Shuttle (French Hermes)
+	- New L3S Variant for many parts
 	- Fix Cost = 0 on some Vesta/Veronique parts
+	- New inventory settings for KSP 1.11
 
 Knes 1.8.2 [2020-07-16]
 -------------------------------
