--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+Knes 1.9.1 [2021-01-02]
+-------------------------------
+
+	- TechTree Review for new Hermes Parts
+	- Fix of Flag on the wrong folder (agency/organisation)
+	
 Knes 1.9.0 [2021-01-02]
 -------------------------------
 
