--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,7 @@ Knes 1.9.1 [2021-01-02]
 
 	- TechTree Review for new Hermes Parts
 	- Fix of Flag on the wrong folder (agency/organisation)
+	- Cost balance for new parts
 	
 Knes 1.9.0 [2021-01-02]
 -------------------------------
