--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,10 @@
-Knes 1.9.1 [2021-01-02]
+Knes 1.9.2 [2021-01-04]
+-------------------------------
+
+	- Reduce Torque Value on Abort Motor to fix KJR problem
+	- Add missing breaking torque value on some parts
+
+Knes 1.9.1 [2021-01-03]
 -------------------------------
 
 	- TechTree Review for new Hermes Parts
