--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,7 @@ Knes 1.9.2 [2021-01-04]
 
 	- Reduce Torque Value on Abort Motor to fix KJR problem
 	- Add missing breaking torque value on some parts
+	- Cleanup some Config
 
 Knes 1.9.1 [2021-01-03]
 -------------------------------
