--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,8 @@ Knes 1.9.2 [2021-01-04]
 	- Reduce Torque Value on Abort Motor to fix KJR problem
 	- Add missing breaking torque value on some parts
 	- Cleanup some Config
+	- Move Cargo Part to Cargo category
+	- Remove ore capacity on small cargo (know inventory)
 
 Knes 1.9.1 [2021-01-03]
 -------------------------------
