--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,11 +1,12 @@
-Knes 1.9.2 [2021-01-04]
+Knes 1.9.2 [2021-01-05]
 -------------------------------
 
 	- Reduce Torque Value on Abort Motor to fix KJR problem
 	- Add missing breaking torque value on some parts
 	- Cleanup some Config
 	- Move Cargo Part to Cargo category
-	- Remove ore capacity on small cargo (know inventory)
+	- Remove ore capacity on small cargo (now inventory)
+	- Add a Patch for RetroCompatibility for old KSP<1.11
 
 Knes 1.9.1 [2021-01-03]
 -------------------------------
