--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,8 @@ Knes 1.9.2 [2021-01-05]
 	- Move Cargo Part to Cargo category
 	- Remove ore capacity on small cargo (now inventory)
 	- Add a Patch for RetroCompatibility for old KSP<1.11
+	- Update some craft files
+	- Adjust Landing gear color
 
 Knes 1.9.1 [2021-01-03]
 -------------------------------
