--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,6 +9,7 @@ Knes 1.9.2 [2021-01-05]
 	- Add a Patch for RetroCompatibility for old KSP<1.11
 	- Update some craft files
 	- Adjust Landing gear color
+	- French Flag adjusted
 
 Knes 1.9.1 [2021-01-03]
 -------------------------------
