--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+Knes 1.9.3 []
+-------------------------------
+
+	- Tweakscale Patch update to include New Hermes Parts by @Lisias
+	- Move Hermes payload Parts to Utility category.
+
 Knes 1.9.2 [2021-01-05]
 -------------------------------
 
