--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,9 @@ Knes 1.9.3 []
 
 	- Tweakscale Patch update to include New Hermes Parts by @Lisias
 	- Move Hermes payload Parts to Utility category.
+	- Reduce Mass of Veronique & Vesta Parts
+	- Augmented Thrust on Veronique Engine
+	- Remove shadow on European Flag
 
 Knes 1.9.2 [2021-01-05]
 -------------------------------
