--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,12 @@ Knes 1.9.3 []
 	- Reduce Mass of Veronique & Vesta Parts
 	- Augmented Thrust on Veronique Engine
 	- Remove shadow on European Flag
+	- New little animation for the Catpod
+	- New Canopy for Viking chute 0.625
+	- New Canopy for Vesta / Catpod parachute 0.3125
+	- New radial Main chute
+	- TechTree Review
+	- Cost Review
 
 Knes 1.9.2 [2021-01-05]
 -------------------------------
