--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -10,6 +10,7 @@ Knes 1.9.3 []
 	- New Canopy for Viking chute 0.625
 	- New Canopy for Vesta / Catpod parachute 0.3125
 	- New radial Main chute
+	- New 1.25 / 0.625 endcap
 	- TechTree Review
 	- Cost Review
 
