--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -13,6 +13,7 @@ Knes 1.9.3 []
 	- New 1.25 / 0.625 endcap
 	- TechTree Review
 	- Cost Review
+	- Fix some physicalSignificance configs
 
 Knes 1.9.2 [2021-01-05]
 -------------------------------
