--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -14,6 +14,7 @@ Knes 1.9.3 []
 	- TechTree Review
 	- Cost Review
 	- Fix some physicalSignificance configs
+	- Fix MRK Max temp
 
 Knes 1.9.2 [2021-01-05]
 -------------------------------
