--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -15,6 +15,9 @@ Knes 1.9.3 []
 	- Cost Review
 	- Fix some physicalSignificance configs
 	- Fix MRK Max temp
+	- New EndCap for EPS engine
+	- New EndCap for EAP nose cones
+	- Metal StarWatcher Variant deprecated
 
 Knes 1.9.2 [2021-01-05]
 -------------------------------
