--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -14,6 +14,8 @@ Knes 1.9.3 []
 	- TechTree Review
 	- Cost Review
 	- Fix some physicalSignificance configs
+	- Fix Wrong texture endcap on 1.25 station module
+	- Fix inline parachute 0.625 max temp
 	- Fix MRK Max temp
 	- New EndCap for EPS engine
 	- New EndCap for EAP nose cones
