--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -19,6 +19,7 @@ Knes 1.9.3 []
 	- Fix MRK Max temp
 	- New EndCap for EPS engine
 	- New EndCap for EAP nose cones
+	- New Endcap for HERA Robotic Arm
 	- Metal StarWatcher Variant deprecated
 
 Knes 1.9.2 [2021-01-05]
