--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,7 @@ Knes 1.9.3 []
 	- New Canopy for Vesta / Catpod parachute 0.3125
 	- New radial Main chute
 	- New 1.25 / 0.625 endcap
+	- New Solar Panel for Callisto Shuttle
 	- TechTree Review
 	- Cost Review
 	- Fix some physicalSignificance configs
