--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -21,6 +21,8 @@ Knes 1.9.3 []
 	- New EndCap for EPS engine
 	- New EndCap for EAP nose cones
 	- New Endcap for HERA Robotic Arm
+	- Kerbal in MRK IVA are no without helmet
+	- New Overlay Mask for MRK IVA
 	- Metal StarWatcher Variant deprecated
 
 Knes 1.9.2 [2021-01-05]
