--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,4 @@
-Knes 1.9.3 []
+Knes 1.9.3 [2021-01-15]
 -------------------------------
 
 	- Tweakscale Patch update to include New Hermes Parts by @Lisias
@@ -12,6 +12,7 @@ Knes 1.9.3 []
 	- New radial Main chute
 	- New 1.25 / 0.625 endcap
 	- New Solar Panel for Callisto Shuttle
+	- Solar Panel Power generation review
 	- TechTree Review
 	- Cost Review
 	- Fix some physicalSignificance configs
