--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -22,6 +22,8 @@ Knes 1.9.3 [2021-01-15]
 	- New EndCap for EPS engine
 	- New EndCap for EAP nose cones
 	- New Endcap for HERA Robotic Arm
+	- New Knes Flag
+	- LH2 patch is now automatic when CryoTank installed
 	- Kerbal in MRK IVA are no without helmet
 	- New Overlay Mask for MRK IVA
 	- Metal StarWatcher Variant deprecated
