--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,7 +1,8 @@
-Knes 1.9.3 [2021-01-15]
+Knes 1.9.3 [2021-01-16]
 -------------------------------
 
 	- Tweakscale Patch update to include New Hermes Parts by @Lisias
+	- Add a patch for Waterfall Support
 	- Move Hermes payload Parts to Utility category.
 	- Reduce Mass of Veronique & Vesta Parts
 	- Augmented Thrust on Veronique Engine
