--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,4 @@
-Knes 1.9.3 [2021-01-16]
+Knes 1.9.3 [2021-01-18]
 -------------------------------
 
 	- Tweakscale Patch update to include New Hermes Parts by @Lisias
@@ -28,6 +28,7 @@ Knes 1.9.3 [2021-01-16]
 	- Kerbal in MRK IVA are no without helmet
 	- New Overlay Mask for MRK IVA
 	- Metal StarWatcher Variant deprecated
+	- Vulcain engine Emissive change
 
 Knes 1.9.2 [2021-01-05]
 -------------------------------
