--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -29,6 +29,7 @@ Knes 1.9.3 [2021-01-18]
 	- New Overlay Mask for MRK IVA
 	- Metal StarWatcher Variant deprecated
 	- Vulcain engine Emissive change
+	- Add Control point on MRK and Hermes Part
 
 Knes 1.9.2 [2021-01-05]
 -------------------------------
