--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+Knes 1.9.4 [2021-01-28]
+-------------------------------
+
+	- Parts mass Fix for small Parts in 1.11
+	- Fix Waterfall Patch
+	
 Knes 1.9.3 [2021-01-19]
 -------------------------------
 
