--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,10 @@ Knes 1.9.4 [2021-01-28]
 
 	- Parts mass Fix for small Parts in 1.11
 	- Fix Waterfall Patch
+	- Fix Hermes Aileron description Inverted Left / Right
+	- Add a Black Variant on core fairings
+	- Change Fairing EndCap Size
+	- Veronique / Vesta parts mass review again
 	
 Knes 1.9.3 [2021-01-19]
 -------------------------------
