Fix Waterfall patch

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Knes 1.9.5 [2021-04-24]
+-------------------------------
+
+	- Fix Waterfall Patch
+
 Knes 1.9.4 [2021-01-28]
 -------------------------------
 
@@ -7,6 +12,7 @@ Knes 1.9.4 [2021-01-28]
 	- Add a Black Variant on core fairings
 	- Change Fairing EndCap Size
 	- Veronique / Vesta parts mass review again
+	- Add ODFC Compatibility Patch (by Tony48)
 	
 Knes 1.9.3 [2021-01-19]
 -------------------------------
