--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@ Knes 1.9.5 [2021-04-24]
 -------------------------------
 
 	- Fix Waterfall Patch
+	- Remove PAL Gimbal
 
 Knes 1.9.4 [2021-01-28]
 -------------------------------
