--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,13 @@
+Knes 1.9.6 [2021]
+-------------------------------
+
+	- Remove srf attach on inline decoupler
+	- Add png icon
+	- Set MRK Antenna to relay
+	- little Techtree review
+	- Add Science Storage on Calissto Crew/docking part
+	- Cost fix for P10/P16 Booster
+	
 Knes 1.9.5 [2021-04-24]
 -------------------------------
 
