--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,10 @@ Knes 1.9.6 [2021]
 	- little Techtree review
 	- Add Science Storage on Calissto Crew/docking part
 	- Cost fix for P10/P16 Booster
+	- Fix EndCap fairing
+	- Fix Crystal laboratory definition
+	- Upscale Crystals growing rate
+	
 	
 Knes 1.9.5 [2021-04-24]
 -------------------------------
