--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,4 @@
-Knes 1.9.6 [2021]
+Knes 1.9.6 [2021-05-15]
 -------------------------------
 
 	- Remove srf attach on inline decoupler
@@ -10,6 +10,8 @@ Knes 1.9.6 [2021]
 	- Fix EndCap fairing
 	- Fix Crystal laboratory definition
 	- Upscale Crystals growing rate
+	- Fix some packed inventory volume
+	- Reduce Arcas Dockings magnet
 	
 	
 Knes 1.9.5 [2021-04-24]
