--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Knes 1.9.7 [2021]
+-------------------------------
+
+	- Add LKS Variant for French Hermes
+
 Knes 1.9.6 [2021-05-15]
 -------------------------------
 
