--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@ Knes 1.9.7 [2021]
 -------------------------------
 
 	- Add LKS Variant for French Hermes
+	- Add Telemetry experiment to Asterix Sat
 
 Knes 1.9.6 [2021-05-15]
 -------------------------------
