--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,7 @@ Knes 1.9.7 [2021]
 
 	- Add LKS Variant for French Hermes
 	- Add Telemetry experiment to Asterix Sat
+	- Fix ATV RCS Block B Fx
 
 Knes 1.9.6 [2021-05-15]
 -------------------------------
