--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,8 +2,12 @@ Knes 1.9.7 [2021]
 -------------------------------
 
 	- Add LKS Variant for French Hermes
+	- Add a Fix small MRK antenna
 	- Add Telemetry experiment to Asterix Sat
 	- Fix ATV RCS Block B Fx
+	- STEAM Crystal lab model review
+	- MRK Thruster are now also Engine
+	- MRK Thruster isp review
 
 Knes 1.9.6 [2021-05-15]
 -------------------------------
